--- a/404.html
+++ b/404.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Angular Template</title>
-  <base href="https://t5957810.github.io/angular-ios-demo/">
+  <base href="https://t5957810.github.io/angular-ios-demo/dashboard">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link rel="stylesheet" href="styles.907bb4cf764b8ff249be.css"></head>
+<link rel="stylesheet" href="styles.a5f24c5ee23fefc55858.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.47bfcb49457326c021a8.js" type="module"></script><script src="polyfills-es2015.7a264d14fd7126ba8db0.js" type="module"></script><script src="runtime-es5.fa7d2c363416c80efa97.js" nomodule></script><script src="polyfills-es5.11fb2116c81a899eaa89.js" nomodule></script><script src="main-es2015.a0027d02e28559689a82.js" type="module"></script><script src="main-es5.69147a41e3096ba9dddc.js" nomodule></script></body>
+<script src="runtime-es2015.409989e38aeeb8614f51.js" type="module"></script><script src="runtime-es5.409989e38aeeb8614f51.js" nomodule defer></script><script src="polyfills-es5.fefa72e12b2a2d6ef7f2.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="main-es2015.b53ebac975c7d0695a3f.js" type="module"></script><script src="main-es5.b53ebac975c7d0695a3f.js" nomodule defer></script></body>
 </html>
