--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Angular Template</title>
-  <base href="https://t5957810.github.io/angular-ios-demo/dashboard">
+  <base href="https://t5957810.github.io/angular-ios-demo/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
